--- a/styles/architects.css
+++ b/styles/architects.css
@@ -11,6 +11,10 @@
     display: flex;
 }
 
+.text-primary{
+    color: #FF900E;
+}
+
 /* dark 02 */
 .text-gray{
     color: #424242;
@@ -38,6 +42,15 @@
 main{
     max-width: 1440px;
     margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
+
+.section-title{
+    font-size: 2.2rem;
+    font-weight: 700;
 }
 
 /* header style  */
@@ -85,9 +98,50 @@ main{
     width: 100%;
 }
 
+/* team and features  */
+
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+#quick-list{
+    font-weight: 500;
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .navbar, .nav-links{
+    .navbar, 
+    .nav-links, 
+    .teams{
         flex-direction: column;
+    }
+
+    .team-img-container{
+        grid-template-columns: repeat(1, fr);
+    }
+
+    .our-features{
+        margin-left: 20px;
+    }
+}
+
+/* medium size device */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
     }
 }
