added exp badge and made the section responsive

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -144,6 +144,23 @@ main > section{
     margin-bottom: 0;
 }
 
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+
+#experience-year{
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+.featured-architect img{
+    width: 100%;
+}
+
 /* some facts */
 
     .facts-container{
@@ -199,6 +216,7 @@ main > section{
 @media screen and (max-width: 576px) {
     .navbar, 
     .nav-links, 
+    .features,
     .teams{
         flex-direction: column;
     }
@@ -221,6 +239,12 @@ main > section{
     .our-features{
         margin-left: 20px;
     }
+    
+    #experience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+    }
+
 }
 
 
